--- a/src/components/mens/Mens.module.css
+++ b/src/components/mens/Mens.module.css
@@ -35,3 +35,10 @@
     text-decoration-thickness: 2px;
     text-underline-offset: 5px;
 }
+
+@media (max-width: 768px) {
+    .men_navbar {
+        display: none;
+        width: 96%;
+    }
+}
