--- a/src/components/women/blog/Womenblog.module.css
+++ b/src/components/women/blog/Womenblog.module.css
@@ -122,3 +122,45 @@ h4 {
 p {
     font-size: 0.9rem;
 }
+
+@media (max-width: 768px) {
+    .Women_blog {
+        margin: 1rem;
+        height: auto;
+        text-align: center;
+    }
+    .main_blog_women {
+        display: flex;
+        flex-direction: column;
+        height: 400px;
+        /* Keeps vertical scroll behavior */
+    }
+    .women_left_blog {
+        display: none;
+    }
+    .women_right_blog {
+        width: 100%;
+        height: 100%;
+        overflow-y: auto;
+        scrollbar-width: thin;
+    }
+    .blog_card {
+        flex-direction: row;
+        gap: 12px;
+        height: auto;
+        align-items: center;
+        padding: 6px 10px;
+    }
+    .img_blog {
+        height: 80px;
+    }
+    .blog_info h3 {
+        font-size: 1.1rem;
+    }
+    .blog_info h4 {
+        font-size: 0.95rem;
+    }
+    .blog_info p {
+        font-size: 0.85rem;
+    }
+}
