--- a/src/components/blogs/Blogs.module.css
+++ b/src/components/blogs/Blogs.module.css
@@ -48,3 +48,36 @@
     padding-bottom: 15px;
     opacity: 0.7;
 }
+
+@media (max-width: 768px) {
+    .main_blog {
+        margin-top: 100px;
+    }
+    .Blogs {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 10px;
+        margin-left: 1rem;
+        margin-right: 1rem;
+    }
+    .blog_card {
+        gap: 3px;
+    }
+    .blog_pic {
+        height: 120px;
+        border-radius: 8px;
+        margin-bottom: 10px;
+    }
+    .blog_title {
+        font-size: 0.9rem;
+        margin-left: 8px;
+        margin-bottom: 3px;
+        padding-bottom: 8px;
+    }
+    .Description,
+    .comment {
+        font-size: 0.8rem;
+        margin-left: 8px;
+        margin-bottom: 6px;
+        padding-bottom: 5px;
+    }
+}
