--- a/src/components/cart/Cart.module.css
+++ b/src/components/cart/Cart.module.css
@@ -134,3 +134,50 @@
     color: white;
     font-size: 13px;
 }
+
+@media (max-width: 768px) {
+    .main_cart {
+        margin: 1rem;
+        margin-top: 50px;
+    }
+    .cart_items {
+        grid-template-columns: 1fr;
+        gap: 15px;
+        width: 95%;
+    }
+    .cart_card {
+        grid-template-columns: 1fr 2fr;
+        gap: 10px;
+        flex-direction: column;
+        padding: 10px;
+    }
+    .cart_image {
+        height: 80px;
+        width: 70px;
+    }
+    .cart_last {
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+    }
+    .continue_btn {
+        width: 100%;
+        font-size: 14px;
+    }
+    .total_price {
+        width: 100%;
+        align-items: center;
+        font-size: 1.1rem;
+    }
+    .buy_btn {
+        width: 100%;
+        height: 40px;
+        font-size: 14px;
+    }
+    .quantity_controls {
+        gap: 10px;
+    }
+    .remove_icon {
+        font-size: 1.2rem;
+    }
+}
