--- a/src/components/cart/final/Final.module.css
+++ b/src/components/cart/final/Final.module.css
@@ -249,3 +249,74 @@
     /* z-index: 1000; */
     position: relative;
 }
+
+@media (max-width: 768px) {
+    .final_cart {
+        flex-direction: column;
+        margin: 2rem 1rem;
+    }
+    .left_final,
+    .right_final {
+        width: 95%;
+    }
+    .final_card {
+        grid-template-columns: 1fr;
+    }
+    .popup {
+        width: 90%;
+        top: 10px;
+    }
+    .popup_overlay {
+        flex-direction: column;
+        height: auto;
+        width: 92%;
+        padding: 15px;
+        align-items: center;
+        /* Center horizontally */
+        justify-content: center;
+        /* Center vertically */
+        text-align: center;
+    }
+    .popup_content {
+        margin: 0;
+        gap: 10px;
+        align-items: center;
+        /* Center inner items */
+    }
+    .popup_close_btn {
+        margin-left: auto;
+    }
+    .track_btn {
+        margin-left: auto;
+        margin-right: auto;
+        width: 95%;
+    }
+    .order_icon {
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .order_track {
+        margin: 1rem;
+        padding: 10px;
+        height: auto;
+    }
+    .one_track_info {
+        flex-direction: column;
+        gap: 10px;
+        text-align: center;
+    }
+    .track_progress {
+        grid-template-columns: 1fr;
+        gap: 20px;
+        margin-top: 10px;
+    }
+    .track_step {
+        margin: 10px auto;
+    }
+    .progress::after {
+        content: none;
+    }
+    .delivery_track h3 {
+        font-size: 1.5rem;
+    }
+}
