--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -120,3 +120,74 @@ a {
     margin-bottom: 60px;
     margin-top: 1px;
 }
+
+@media (max-width: 768px) {
+    .begin {
+        height: auto;
+        gap: 5px;
+    }
+    .first {
+        flex-direction: column;
+        align-items: center;
+        margin-left: 1rem;
+        height: auto;
+    }
+    .first_second {
+        display: none;
+    }
+    .first_third {
+        display: none;
+        margin-right: 0;
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+    }
+    .first_icons {
+        margin-left: 0;
+        justify-content: center;
+        flex-wrap: wrap;
+    }
+    .second {
+        flex-direction: column;
+        align-items: center;
+        margin-left: 0.5rem;
+        margin-right: 0.5rem;
+        height: auto;
+        gap: 10px;
+    }
+    .logo {
+        height: 6.5rem;
+        width: 7.5rem;
+        margin-bottom: -45px;
+    }
+    .search_box {
+        width: 95%;
+        font-size: 1rem;
+        padding: 12px;
+        margin-top: -100px;
+    }
+    .second_last {
+        gap: 15px;
+        justify-content: center;
+        margin-right: 0;
+        flex-wrap: wrap;
+    }
+    .second_icon,
+    .second_icons {
+        height: 22px;
+        width: 22px;
+        margin-top: 5px;
+        /* margin: 5px 5px; */
+    }
+    a {
+        height: 22px;
+        width: 22px;
+    }
+    .social_icon {
+        height: 15px;
+        width: 15px;
+    }
+    .usd {
+        display: none;
+    }
+}
