--- a/src/components/home/Subscribe/Subscribe.module.css
+++ b/src/components/home/Subscribe/Subscribe.module.css
@@ -90,3 +90,46 @@
     margin-top: 30px;
     margin-right: 30px;
 }
+
+@media (max-width: 768px) {
+    .front {
+        width: 100vw;
+        height: 100vh;
+        padding: 0;
+        left: 0;
+        top: 0;
+        overflow-y: auto;
+        align-items: flex-start;
+    }
+    .subscribe {
+        flex-direction: column;
+        width: 85vw !important;
+        height: auto;
+        margin: 120px auto 50px auto;
+        border-radius: 15px;
+        box-shadow: rgba(0, 0, 0, 0.4) 0px 4px 12px;
+    }
+    .image {
+        width: 100%;
+        height: 200px;
+        object-fit: cover;
+        border-radius: 15px 15px 0 0;
+        display: block;
+    }
+    .subscribe_info {
+        width: 90%;
+        margin-top: 20px;
+        padding: 15px;
+        gap: 12px;
+    }
+    .email_input,
+    .subscribe_btn {
+        width: 80%;
+        font-size: 1rem;
+    }
+    .sub_cut {
+        margin: 10px 150px;
+        display: block;
+        /* display: contents; */
+    }
+}
