--- a/src/components/mens/menblog/Menblog.module.css
+++ b/src/components/mens/menblog/Menblog.module.css
@@ -16,3 +16,20 @@
 .cards {
     display: block;
 }
+
+@media (max-width: 768px) {
+    .men_blog {
+        flex-direction: column;
+        margin-left: 1rem;
+        margin-right: 1rem;
+        margin-bottom: 1rem;
+        height: auto;
+    }
+    .men_blog_pic {
+        width: 100%;
+        height: 200px;
+    }
+    .cards {
+        width: 100%;
+    }
+}
