--- a/src/components/mens/slide/Serviceslide.module.css
+++ b/src/components/mens/slide/Serviceslide.module.css
@@ -60,7 +60,10 @@
     color: black;
 }
 
-@media(max-width:700px) {
+@media(max-width:640px) {
+    .Serviceslide {
+        margin-left: 5px;
+    }
     .SliderContainer {
         /* width: 100%; */
         height: 80px;
@@ -74,8 +77,8 @@
         white-space: nowrap;
         scrollbar-width: thin;
         scrollbar-color: #b9b7b7 #f4f4f4;
-        margin-left: 2rem;
-        margin-right: 2rem;
+        /* margin-left: 1rem; */
+        margin-right: 1rem;
         -ms-overflow-style: none;
         /* For Internet Explorer */
         scrollbar-width: thin;
@@ -88,13 +91,13 @@
         gap: 3px;
         height: 50px;
         justify-content: space-evenly;
-        min-width: 120px;
+        min-width: 110px;
         border: 1px solid rgb(83, 78, 78, 0.32);
         opacity: 0.6;
         border-radius: 10px;
         padding-top: 10px;
         padding-left: 2px;
-        margin: 8px;
+        /* margin: 8px; */
         /* margin-bottom: -10px; */
     }
     .style_pic {
