--- a/src/components/products/sidebar/Sidebar.module.css
+++ b/src/components/products/sidebar/Sidebar.module.css
@@ -102,32 +102,35 @@
 }
 
 @media (max-width: 668px) {
-    .side_category {
+    .mainside {
+        width: 90vw;
+        margin: auto;
+    }
+    .sidebar {
+        width: 95%;
+        padding: 10px;
+        position: static;
+    }
+    .side_bottom {
         display: none;
     }
-    .card_BestSellers {
-        flex-direction: column;
-        align-items: flex-start;
-        padding: 10px;
+    .side_category {
+        margin: 5px;
     }
-    .card_link {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
+    .category_name {
+        padding: 5px;
+        font-size: 0.9rem;
     }
-    .prod_pic {
-        height: 40px;
-        width: 40px;
-        margin-bottom: 5px;
+    .plus_btn {
+        font-size: 1.2rem;
+        background-color: #f1f1f1;
+        border-radius: 5px;
+        padding: 2px 6px;
+        color: #333;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
     }
-    .prod_info {
-        gap: 3px;
-    }
-    .prod_price {
-        gap: 6px;
-        font-size: 0.8rem;
-    }
-    .prod_title {
-        font-size: 0.8rem;
+    .plus_btn:hover {
+        background-color: #e4e4e4;
     }
 }
